--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "unfetch": "^4.2.0"
   },
   "devDependencies": {
     "@nuxtjs/svg": "^0.1.11",
