--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vue-website",
+  "type": "module",
   "version": "1.0.0",
   "description": "My groundbreaking Nuxt.js project",
   "author": "Jeremy Kim",
@@ -11,14 +12,14 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
-    "unfetch": "^4.2.0"
+    "nuxt": "^3.6.2",
+    "unfetch": "^5.0.0"
   },
   "devDependencies": {
-    "@nuxtjs/svg": "^0.1.11",
+    "@nuxtjs/svg": "^0.4.0",
     "@nuxtjs/vuetify": "^1.0.0",
     "bulma": "^0.9.0",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^7.1.0"
+    "node-sass": "^9.0.0",
+    "sass-loader": "^13.3.2"
   }
 }
